--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,37 @@
-<div class="bg-transparent p-4 text-center">
+<div class="container panel">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/ticketMaster" routerLinkActive="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/bucket" routerLinkActive="active">Bucket List {{getBucketSize()}}</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
+  <div class="bg-transparent p-4 text-center">
     <ngb-carousel *ngIf="imagesArray">
       <ng-template ngbSlide *ngFor="let image of imagesArray">
         <div class="picsum-img-wrapper">
-          <img [src]="image.url" alt="Random first slide" class="card-img-top"  height="200"/>
+          <div class="bg-image">
+            <img class=.bg-image [src]="image.url" alt="Random first slide" class="card-img-top" height="200" />
+          </div>
         </div>
         <div class="carousel-caption">
           <h3>{{image.name}}</h3>
         </div>
       </ng-template>
     </ngb-carousel>
-</div>
-
-<div class="container">
+  </div>
   <router-outlet></router-outlet>
-  <br>
-  <br>
-  <nav>
-    <a routerLink="/ticketMaster" routerLinkActive="active">Home</a>
-    <br>
-    <a routerLink="/bucket" routerLinkActive="active">Bucket List</a>
-    <br>
-  </nav>
 
+<footer class="text-center text-lg-start bg-light text-muted">
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2022 Copyright:
+    <a class="text-reset fw-bold" href="#">TicketMaster Lab9</a>
+  </div>
+</footer>
 </div>
